Fixed JavaDoc and Planet and Bridge classes